<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/setting_vip_right_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/all_press_selector_backgroud"
        android:clickable="true"
        android:orientation="vertical"
        android:paddingBottom="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp">

            <RelativeLayout
                android:id="@+id/setting_vip_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/setting_vip_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="11dp"
                    android:src="@mipmap/setting_vip_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="5dp"
                    android:layout_toRightOf="@+id/setting_vip_iv"
                    android:text="@string/setting_vip_rights_text"
                    android:textColor="@color/color_3_gray_3f"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="18dp"
                    android:src="@mipmap/next_page_gray"
                    android:visibility="visible" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/pay_vip_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="5dp"
                    android:text="@string/setting_vip_rights_text"
                    android:textColor="@color/color_3_gray_3f"
                    android:textSize="@dimen/dp_15" />

            </RelativeLayout>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/black5" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/vip_no_interfence_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:src="@mipmap/no_interfence_icon"
                        android:visibility="visible" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/vip_no_interfence_icon"
                        android:layout_centerHorizontal="true"
                        android:layout_gravity="center"
                        android:layout_marginTop="3dp"
                        android:text="@string/setting_vip_no_interfence"
                        android:textColor="@color/FONT_DARK"
                        android:textSize="13sp" />
                </RelativeLayout>
            </LinearLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="5dp"
                android:layout_weight="0.005"
                android:background="@color/black5" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/vip_hd_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:src="@mipmap/high_eye_icon"
                        android:visibility="visible" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/vip_hd_icon"
                        android:layout_centerHorizontal="true"
                        android:layout_gravity="center"
                        android:layout_marginTop="3dp"
                        android:text="@string/setting_vip_hd_text"
                        android:textColor="@color/FONT_DARK"
                        android:textSize="13sp" />
                </RelativeLayout>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/setting_vip_add_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:visibility="visible">

        <TextView
            android:id="@+id/vip_money_warn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="购买会员仅需8元"
            android:textColor="@color/color_3_gray_3f"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/vip_activity_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/vip_money_warn"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:text="@string/setting_vip_money_warn"
            android:textColor="@color/color_text_99"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/vip_add_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/open_vip_btn"
            android:text="@string/setting_vip_open"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="13sp" />

    </RelativeLayout>

</LinearLayout>

